** == Known Issues Planned
	**Made a default news page template
	**Cleaned up code to be less repetitive
	**Prettify URLs
    **Create Error page for Player profile page
	**Added Team Page Link to Nav sections where required
	**Seperated PlayerProfile PHP code from playerprofile.php
	**Set the title of each page dynamically
	**Added quick nav logos
	**Fixed Nav bug where leaving column header at wrong place
	  will cancel hover.
	**Created First Team Fixtures and Results Page
	**Created League Table Page
	**Created News Index Page
	**Created Tickets Page
	**Created About Club Page
	**Created Fans Page
	**Created Shop Page
	

	
15/12/17
	-Adjusted player profile page to show full name
	-Added more players to the player profile page
	-Added "On-Loan" section to first team page
 	-Fixed Site Wide Footer and Sponsor Bug
	-Fixed Headers on First Team Page
14/12/17
	-Added the structure for when clicking on a players image in the team page
	section takes you to a new page with the information on it. 
	
	
13/12/17 Changelog

12/12/17 Changelog:
	Functionality where clicking a players image will 
	take you to the appropriate page without need for seperate php/html
	files.


11/12/17 Changelog:
 ** == Known Issues / Planned
	Removed Caching from Website by changing...
		opcache.enable=0
		opcache.enable_cli=0
	.. in php.ini
	
	Added player images to the "Team" page

8/12/12 Changelog:
 ** == Known Issues / Planned 
	Added First Team Page
	Added PHP functionality
	
	
	
	
7/12/12 Changelog:
 ** == Known Issues / Planned 
	Added Ad Bar Image
	Move Sponsors Along to correct position
	Added Highlight on main nav when hovering
	Added hyperlinks to nav headers
	Reset anchor tags pagewide
	Added Changelog
	Spacing Issues in Celtic TV Column
	Colour Corrections in Celtic TV Column
	Font Correction in Celtic TV Column		
	Spacing Issues in Club Column	
		*Happy with it for now. Might come back later.
	Spacing Issues in Tickets Column
		*Happy with it for now. Might come back later.